# SEA_Scrapping

./: .gitignore  00_extract_seaproyects.py  01_geopkg_parsing.py  02_filtering_enrichment.py  03_mongo_async_scrapper.py  04_duckdb_parsing.py  05_duckdb_eda.py  06_similarity_score.py  README.md  hello.py  pyproject.toml  utils.py
