[project]
name = "sea-scrapping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "duckdb>=1.1.3",
    "gdal[numpy]==3.8.4.*",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "playwright>=1.49.1",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
]
